--- a/UIs/nColorBarWin.ui
+++ b/UIs/nColorBarWin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>392</width>
-    <height>330</height>
+    <width>474</width>
+    <height>333</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" columnstretch="3">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="3,0">
     <property name="leftMargin">
      <number>4</number>
     </property>
@@ -53,7 +53,7 @@
        <attribute name="title">
         <string>Colorbar</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,1,0">
+       <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0">
         <property name="leftMargin">
          <number>4</number>
         </property>
@@ -66,6 +66,24 @@
         <property name="bottomMargin">
          <number>4</number>
         </property>
+        <item row="0" column="0">
+         <widget class="QWidget" name="widget_3" native="true">
+          <layout class="QGridLayout" name="gridLayout_8" columnstretch="0">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+          </layout>
+         </widget>
+        </item>
         <item row="1" column="0">
          <widget class="nHistogram" name="histogram" native="true">
           <property name="minimumSize">
@@ -88,11 +106,12 @@
           <property name="focusPolicy">
            <enum>Qt::StrongFocus</enum>
           </property>
+          <zorder>widget</zorder>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QWidget" name="widget" native="true">
-          <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0,0,0">
+          <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0,0,0,0,0">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -201,7 +220,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="3" rowspan="2">
+           <item row="0" column="5" rowspan="2">
             <widget class="QSlider" name="gamma">
              <property name="toolTip">
               <string>Image gamma</string>
@@ -223,24 +242,45 @@
              </property>
             </widget>
            </item>
-          </layout>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QWidget" name="widget_3" native="true">
-          <layout class="QGridLayout" name="gridLayout_8" columnstretch="0">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
-           </property>
+           <item row="0" column="3">
+            <widget class="QSpinBox" name="percentMin">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="toolTip">
+              <string>Percentage max of pixels to rescale</string>
+             </property>
+             <property name="suffix">
+              <string>%</string>
+             </property>
+             <property name="maximum">
+              <number>100</number>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="3">
+            <widget class="QSpinBox" name="percentMax">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="toolTip">
+              <string>Percentage max of pixels to rescale</string>
+             </property>
+             <property name="suffix">
+              <string>%</string>
+             </property>
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>100</number>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
@@ -481,24 +521,6 @@
         </item>
        </layout>
       </widget>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QDoubleSpinBox" name="percent">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-      <property name="value">
-       <double>100.000000000000000</double>
-      </property>
      </widget>
     </item>
    </layout>
