--- a/src/gui/holderGUI/holderGUI.ui
+++ b/src/gui/holderGUI/holderGUI.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>nBoxLineout</class>
- <widget class="QMainWindow" name="HolderGUI">
+ <class>holderGUI</class>
+ <widget class="QMainWindow" name="holderGUI">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -48,6 +48,28 @@
     </font>
    </property>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>434</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpen"/>
+   </widget>
+   <addaction name="menuFile"/>
+  </widget>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
