first image displayed

--- a/src/gui/holderGUI/holderGUI.ui
+++ b/src/gui/holderGUI/holderGUI.ui
@@ -24,23 +24,18 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <property name="leftMargin">
-     <number>0</number>
-    </property>
-    <property name="topMargin">
-     <number>0</number>
-    </property>
-    <property name="rightMargin">
-     <number>0</number>
-    </property>
-    <property name="bottomMargin">
-     <number>0</number>
-    </property>
     <item row="0" column="0">
-     <widget class="QListWidget" name="listPhys"/>
-    </item>
-    <item row="1" column="0">
-     <widget class="nView" name="graphicsView"/>
+     <widget class="QSplitter" name="splitter">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <widget class="QListWidget" name="listPhys"/>
+      <widget class="nView" name="graphicsView">
+       <property name="mouseTracking">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
