--- a/UIs/nColorBar.ui
+++ b/UIs/nColorBar.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>474</width>
-    <height>333</height>
+    <height>334</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" columnstretch="3,0">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="3">
     <property name="leftMargin">
      <number>4</number>
     </property>
@@ -110,7 +110,7 @@
         </item>
         <item row="2" column="0">
          <widget class="QWidget" name="widget" native="true">
-          <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0,0,0,0,0">
+          <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0,0,0,0,0,0">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -123,15 +123,15 @@
            <property name="bottomMargin">
             <number>0</number>
            </property>
-           <item row="1" column="2">
-            <widget class="QPushButton" name="setToMax">
+           <item row="0" column="2">
+            <widget class="QPushButton" name="setToMin">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
               </font>
              </property>
              <property name="text">
-              <string>Max</string>
+              <string>Min</string>
              </property>
             </widget>
            </item>
@@ -150,30 +150,6 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QSlider" name="sliderMax">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-             <property name="maximum">
-              <number>10000</number>
-             </property>
-             <property name="pageStep">
-              <number>1000</number>
-             </property>
-             <property name="value">
-              <number>10000</number>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
            <item row="0" column="1">
             <widget class="QLineEdit" name="lineMin">
              <property name="font">
@@ -183,36 +159,6 @@
              </property>
              <property name="text">
               <string>0.0</string>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QPushButton" name="setToMin">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>Min</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QSlider" name="sliderMin">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-             <property name="maximum">
-              <number>10000</number>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
              </property>
              <property name="neutrinoSave" stdset="0">
               <bool>false</bool>
@@ -241,33 +187,69 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="3">
-            <widget class="QSpinBox" name="percentMin">
+           <item row="1" column="2">
+            <widget class="QPushButton" name="setToMax">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
               </font>
              </property>
-             <property name="toolTip">
-              <string>Percentage max of pixels to rescale</string>
-             </property>
-             <property name="suffix">
-              <string>%</string>
-             </property>
-             <property name="maximum">
-              <number>100</number>
+             <property name="text">
+              <string>Max</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="3">
-            <widget class="QSpinBox" name="percentMax">
+           <item row="1" column="0">
+            <widget class="QSlider" name="sliderMax">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="maximum">
+              <number>10000</number>
+             </property>
+             <property name="pageStep">
+              <number>1000</number>
+             </property>
+             <property name="value">
+              <number>10000</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QSlider" name="sliderMin">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="maximum">
+              <number>10000</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="6">
+            <widget class="QSpinBox" name="percent">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
               </font>
              </property>
              <property name="toolTip">
-              <string>Percentage max of pixels to rescale</string>
+              <string>Percent of pixels to show in the colorbar</string>
              </property>
              <property name="suffix">
               <string>%</string>
